@@ -1,5 +1,10 @@
 $Id$
 
+2016-04-09  Christian Franke  <franke@computer.org>
+
+	nvmecmds.cpp, os_win32.cpp: Use NSID=0 for Identify Controller
+	command.  This fixes NVMe access via Samsung driver on Windows.
+
 2016-04-08  Christian Franke  <franke@computer.org>
 
 	os_win.cpp: Add initial NVMe support for Windows.
